# MinecraftClone

./: CMakeLists.txt  MinecraftClone.sln  premake5.lua
MinecraftClone/: MinecraftClone.vcxproj
MinecraftClone/src/: application.cpp  application.hpp  camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  defines.hpp  event.hpp  event_handler.hpp  fps.hpp  frustum.cpp  frustum.hpp  hash.hpp  lit.frag  lit.vert  log.cpp  log.hpp  main.cpp  ray.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  sun.cpp  sun.hpp  thread_pool.cpp  thread_pool.hpp  transform.hpp  types.hpp  unlit.frag  vertex.hpp  voxel.cpp  voxel.frag  voxel.hpp  voxel.vert  voxel_face.hpp  voxel_hit_info.hpp  window.cpp  (+1 more)
include/c-util/: c-util.h
src/: main.c
